# SlicerAuto3dgm

./: CMakeLists.txt  Readme.md
Auto3dgm/: Auto3dgm.py  CMakeLists.txt  README.md
Auto3dgm/auto3dgm_nazar/: SSmodifiedJulientestiDec20.py  __init__.py
Auto3dgm/auto3dgm_nazar/analysis/: correspondence.py
Auto3dgm/auto3dgm_nazar/lib/: mosek.lic
Auto3dgm/auto3dgm_nazar/mesh/: mesh.py
meshviewer/: CMakeLists.txt
